templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: h-spring-svc
spec:
  type: ClusterIP
  selector:
    app: h-spring
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      NodePort: 30009
