templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: h-spring-ingress
  annotations:
    kubernetes.io/ingressClassName: "nginx"
    cer-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - f.sen-pai.live
      secretName: h-spring-tls
  rules:
    - host: f.sen-pai.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: h-spring-svc
                port:
                  number: 8080
